--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "DeelChallenge",
+  "name": "deel-challenge",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "@react-native/new-app-screen": "0.81.4",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
@@ -28,6 +31,7 @@
     "@react-native/typescript-config": "0.81.4",
     "@types/jest": "^29.5.13",
     "@types/react": "^19.1.0",
+    "@types/react-native-fs": "^2.8.3",
     "@types/react-test-renderer": "^19.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
