--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-navigation/stack": "^7.4.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-fs": "^2.20.0",
+    "react-native-blob-util": "^0.22.2",
     "react-native-gesture-handler": "^2.28.0",
     "react-native-safe-area-context": "^5.5.2"
   },
